Used filter option to get the years 2012 to 2016

--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -19,6 +19,11 @@ Batting <- read_csv("Baseball_Index/Batting.csv")
 Pitching <- read_csv("Baseball_Index/Pitching.csv")
 Fielding <- read_csv("Baseball_Index/Fielding.csv")
 ```
+```{r}
+Batting_df <-filter(Batting, yearID == 2012, 2013, 2014, 2015, 2016)
+Pitching_df <- filter(Pitching, yearID == 2012, 2013, 2014, 2015, 2016)
+Fielding_df <- filter(Fielding, yearID == 2012, 2013, 2014, 2015, 2016 )
+```
 
 
 
