Add Teams, AllStar, BattingPost and PitchingPost to data set

--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -18,11 +18,23 @@ Master <- read_csv("Baseball_Index/Master.csv")
 Batting <- read_csv("Baseball_Index/Batting.csv")
 Pitching <- read_csv("Baseball_Index/Pitching.csv")
 Fielding <- read_csv("Baseball_Index/Fielding.csv")
+Teams <- read_csv("Baseball_Index/Teams.csv")
+AllStar <- read_csv("Baseball_Index/AllstarFull.csv")
+BattingPost <- read_csv("Baseball_Index/BattingPost.csv")
+PitchingPost <- read_csv("Baseball_Index/PitchingPost.csv")
 ```
 ```{r}
 Batting_df <-filter(Batting, yearID == 2012, 2013, 2014, 2015, 2016)
 Pitching_df <- filter(Pitching, yearID == 2012, 2013, 2014, 2015, 2016)
 Fielding_df <- filter(Fielding, yearID == 2012, 2013, 2014, 2015, 2016 )
+Teams_df <- filter(Teams, yearID == 2012, 2013, 2014, 2015, 2016)
+AllStar_df <- filter(AllStar, yearID == 2012, 2013, 2014, 2015, 2016)
+BattingPost_df <- filter(BattingPost, yearID == 2012, 2013, 2014, 2015, 2016)
+PitchingPost_df <- filter(PitchingPost, yearID == 2012, 2013, 2014, 2015, 2016)
+```
+
+```{r}
+Baseball <- 
 ```
 
 
