--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -21,8 +21,9 @@ Fielding <- read_csv("Baseball_Index/Fielding.csv")
 Teams <- read_csv("Baseball_Index/Teams.csv")
 AllStar <- read_csv("Baseball_Index/AllstarFull.csv")
 BattingPost <- read_csv("Baseball_Index/BattingPost.csv")
-PitchingPost <- read_csv("Baseball_Index/PitchingPost.csv")
 ```
+
+
 ```{r}
 Batting_df <-filter(Batting, yearID == 2012, 2013, 2014, 2015, 2016)
 Pitching_df <- filter(Pitching, yearID == 2012, 2013, 2014, 2015, 2016)
@@ -30,12 +31,17 @@ Fielding_df <- filter(Fielding, yearID == 2012, 2013, 2014, 2015, 2016 )
 Teams_df <- filter(Teams, yearID == 2012, 2013, 2014, 2015, 2016)
 AllStar_df <- filter(AllStar, yearID == 2012, 2013, 2014, 2015, 2016)
 BattingPost_df <- filter(BattingPost, yearID == 2012, 2013, 2014, 2015, 2016)
-PitchingPost_df <- filter(PitchingPost, yearID == 2012, 2013, 2014, 2015, 2016)
 ```
+
 
 ```{r}
-Baseball <- 
+head(Batting_df)
 ```
 
+As you would expect, there is a linear relationship between at bats and RBi. Similiar results with the other variables in this data set as well. 
+```{r}
+ggplot(data = Batting_df) + 
+  geom_point(mapping = aes(x = AB, y = RBI))
+```
 
 
