--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -38,10 +38,11 @@ BattingPost_df <- filter(BattingPost, yearID == 2012, 2013, 2014, 2015, 2016)
 head(Batting_df)
 ```
 
-As you would expect, there is a linear relationship between at bats and RBi. Similiar results with the other variables in this data set as well. 
+As you would expect, there is a positive linear relationship between at bats and RBI's. Similiar results with the other variables in this data set as well. 
+
 ```{r}
 ggplot(data = Batting_df) + 
-  geom_point(mapping = aes(x = AB, y = RBI))
+  geom_point(mapping = aes(x = AB, y = RBI), color="blue") +
+  geom_smooth(mapping = aes(x = AB, y = RBI))
 ```
-
 
