--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -40,7 +40,8 @@ head(Batting_df)
 
 As you would expect, there is a positive linear relationship between at bats and RBI's. Similiar results with the other variables in this data set as well. 
 ```{r}
-ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI)) +
+# Add jitter feature to spread out points
+ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI), position="jitter") +
   geom_smooth() +
   geom_point() 
 ```
@@ -67,8 +68,11 @@ ggplot(data = Batting_df) +
 ```
 
 
-
-
+```{r}
+# Color a bar chart using fill
+ggplot(data= Batting_df) +
+  geom_bar(mapping = aes(x=HR))
+```
 
 
 
