--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -41,16 +41,17 @@ head(Batting_df)
 As you would expect, there is a positive linear relationship between at bats and RBI's. Similiar results with the other variables in this data set as well. 
 ```{r}
 # Add jitter feature to spread out points
-ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI), position="jitter") +
+ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI)) +
   geom_smooth() +
-  geom_point() 
+  geom_point() +
+  geom_jitter() 
 ```
 
 Interesting chart that shows how many games most players play.
 ```{r}
 # Basic barplot in ggplot
 ggplot(data = Batting_df) +
-  geom_bar(mapping = aes(x=G), color='blue')
+  geom_bar(mapping = aes(x=HR), color='blue')
 ```
 
 
@@ -67,11 +68,12 @@ ggplot(data = Batting_df) +
   )
 ```
 
-
 ```{r}
 # Color a bar chart using fill
 ggplot(data= Batting_df) +
-  geom_bar(mapping = aes(x=HR))
+  geom_bar(mapping = aes(x=class, y = )) +
+  coord_flip() # Used to flip the coordinate
+  
 ```
 
 
