--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -36,17 +36,21 @@ BattingPost_df <- filter(BattingPost, yearID == 2012, 2013, 2014, 2015, 2016)
 
 ```{r}
 # Data set focusing on batting, pitching and fielding
-Multiple <- left_join(Batting_df,Pitching_df,Fielding_df, by="playerID")
-View(Multiple)
+Multiple <- left_join(Batting_df,Pitching_df, fielding_df, by="playerID")
 ```
 
+
+```{r}
+dim(Batting_df)
+
+```
 
 
 
 As you would expect, there is a positive linear relationship between at bats and RBI's. Similiar results with the other variables in this data set as well. 
 ```{r}
 # Add jitter feature to spread out points
-ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI)) +
+ggplot(data = Multiple, mapping = aes(x = AB, y = RBI)) +
   geom_smooth() +
   geom_point() +
   geom_jitter() 
@@ -55,8 +59,8 @@ ggplot(data = Batting_df, mapping = aes(x = AB, y = RBI)) +
 Interesting chart that shows how many games most players play.
 ```{r}
 # Basic barplot in ggplot
-ggplot(data = Batting_df) +
-  geom_bar(mapping = aes(x=HR), color='blue')
+ggplot(data = Multiple) +
+  geom_bar(mapping = aes(x=G, color='blue')
 ```
 
 
@@ -75,7 +79,7 @@ ggplot(data = Batting_df) +
 
 ```{r}
 # Color a bar chart using fill
-ggplot(data= Batting_df) +
+ggplot(data= Multiple) +
   geom_bar(mapping = aes(x=class, y = )) +
   coord_flip() # Used to flip the coordinate
   
