--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -14,6 +14,7 @@ library(tidyverse)
 
 
 ```{r}
+Appearances <- read.csv("Baseball_Index/Appearances.csv")
 Master <- read_csv("Baseball_Index/Master.csv")
 Batting <- read_csv("Baseball_Index/Batting.csv")
 Pitching <- read_csv("Baseball_Index/Pitching.csv")
@@ -21,10 +22,13 @@ Fielding <- read_csv("Baseball_Index/Fielding.csv")
 Teams <- read_csv("Baseball_Index/Teams.csv")
 AllStar <- read_csv("Baseball_Index/AllstarFull.csv")
 BattingPost <- read_csv("Baseball_Index/BattingPost.csv")
+Salaries <- read_csv("Baseball_Index/Salaries.csv")
+Teams <- read_csv("Baseball_Index/Teams.csv")
 ```
 
 
 ```{r}
+
 Batting_df <-filter(Batting, yearID == 2012, 2013, 2014, 2015, 2016)
 Pitching_df <- filter(Pitching, yearID == 2012, 2013, 2014, 2015, 2016)
 Fielding_df <- filter(Fielding, yearID == 2012, 2013, 2014, 2015, 2016 )
