--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -28,13 +28,15 @@ Teams <- read_csv("Baseball_Index/Teams.csv")
 
 
 ```{r}
-
+Appearances_df <-filter(Appearances, yearID == 2012, 2013, 2014, 2015, 2016)
 Batting_df <-filter(Batting, yearID == 2012, 2013, 2014, 2015, 2016)
 Pitching_df <- filter(Pitching, yearID == 2012, 2013, 2014, 2015, 2016)
 Fielding_df <- filter(Fielding, yearID == 2012, 2013, 2014, 2015, 2016 )
 Teams_df <- filter(Teams, yearID == 2012, 2013, 2014, 2015, 2016)
 AllStar_df <- filter(AllStar, yearID == 2012, 2013, 2014, 2015, 2016)
 BattingPost_df <- filter(BattingPost, yearID == 2012, 2013, 2014, 2015, 2016)
+Teams_df <- filter(Teams, yearID == 2012, 2013, 2014, 2015, 2016)
+Salaries_df <- filter(Salaries, yearID == 2012, 2013, 2014, 2015, 2016)
 ```
 
 
