--- a/MB_Dataset.Rmd
+++ b/MB_Dataset.Rmd
@@ -39,17 +39,17 @@ Salaries_df <- filter(Salaries, yearID == 2012, 2013, 2014, 2015, 2016)
 
 ```{r}
 library(GGally)
- data(Batting_df, package = "reshape")
- ggally_dot_and_box(
-   Batting_df,
-   mapping = ggplot2::aes(x = RBI, y = R, color = R),
-   boxPlot = TRUE
- )
- ggally_dot_and_box(
-   Batting_df,
-   mapping = ggplot2::aes(x = RBI, y = R, color = R),
-   boxPlot = FALSE
- )
+data(tips, package = "reshape")
+pm <- ggpairs(tips[, 2:3])
+## change to black and white theme
+pm + ggplot2::theme_bw()
+## change to linedraw theme
+# pm + ggplot2::theme_linedraw()
+## change to custom theme
+# pm + ggplot2::theme(panel.background = ggplot2::element_rect(fill = "lightblue"))
+## add a list of information
+extra <- list(ggplot2::theme_bw(), ggplot2::labs(caption = "My caption!"))
+pm + extra
 ```
 
 
